--- a/style/screen.css
+++ b/style/screen.css
@@ -67,8 +67,6 @@ p{
 
 .c-filter{
     display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .c-filter__circle{
@@ -81,6 +79,35 @@ p{
     justify-content: center;
     margin: auto;
     margin-top: 8px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    align-items: center;
+}
+
+.c-filter__search{
+    background-color:white;
+    border-radius: 100%;
+    display: flex;
+    width: 75px;
+    height: 75px;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    margin-top: 8px;
+}
+
+.c-filter__search input{
+    border-radius: 100%;
+    border: none;
+    background-color: white;
+    display: flex;
+    font-size: 18px;
+    width: 100%;
+    height: 100%;
+    padding: 0 10px;
 }
 
 
