--- a/style/screen.css
+++ b/style/screen.css
@@ -63,6 +63,14 @@ p{
     font-size: 12px;
 }
 
+.visual{
+    visibility: hidden;
+}
+
+.visual-show{
+    visibility: visible;
+}
+
 @media (min-width: 500px) {
     .c-header {
         position: absolute;
@@ -150,6 +158,7 @@ p{
     margin-top: 16px;
     border: 0px;
     padding-left: 10px;
+    margin-bottom: 16px;
 }
 
 .c-filter__search input{
@@ -180,6 +189,7 @@ p{
     margin: auto;
     border-radius: 15px;
     z-index: 1;
+    margin-bottom: 16px;
 }
 
 .c-games__show{
@@ -199,7 +209,7 @@ p{
     margin-left: -165px;
     border-radius: 15px;
     position: absolute;
-    margin-top: -800px;
+    margin-top: -810px;
     transition: 1s
 }
 
@@ -213,7 +223,6 @@ p{
         grid-template-columns: 1fr 1fr 1fr 1fr;
         grid-gap: 32px;
         margin: 0;
-        margin-top: 16px;
         margin-left: 8px;
     }
 
@@ -234,6 +243,14 @@ p{
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-gap: 16px;
+    }
+
+    .c-games{
+        margin-bottom: 0px;
+    }
+
+    .c-filter__search{
+        margin-bottom: 32px;
     }
 }
 
