--- a/league_champions/style/screen.css
+++ b/league_champions/style/screen.css
@@ -296,6 +296,7 @@ p{
 .c-games__title{
     transition: 0.5s;
     width: 10.9375rem;
+    height: 32rem;
     padding: 0.5rem 0.5rem;
     margin: 0;
     z-index: 1;
